# OpenCuria

./: .env.example  .env.server.example  .gitignore  AGENTS.md  LICENSE  README.md  compose.server.yml  compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  api.py  api_auth.py  apps.py  auth_backends.py  models.py  schemas.py  sso.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: test_sso_api.py
backend/apps/credentials/: admin.py  api.py  apps.py  enums.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
backend/apps/credentials/migrations/: 0001_initial.py  0002_seed_global_credential_services.py  0003_credentialservice_target_path_and_more.py
backend/apps/credentials/tests/: test_api.py  test_services.py
backend/apps/mcp_app/: __init__.py  auth.py  server.py
backend/apps/organizations/: __init__.py  admin.py  api.py  apps.py  models.py  repositories.py  schemas.py  services.py
backend/apps/runners/: __init__.py  admin.py  api.py  apps.py  desktop_proxy.py  enums.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  sio_server.py
backend/apps/skills/: admin.py  api.py  models.py  repositories.py  schemas.py  services.py
backend/common/: __init__.py  exceptions.py  middleware.py  utils.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
(+247 files in other folders)
